--- a/style.css
+++ b/style.css
@@ -2,52 +2,50 @@ body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    width: 100%;
+    height: 100%;
 }
 
 .wrapper{
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 75px;
+    height: 100%;
     display: grid;
     grid-template-areas: "header"
-                         "content"
-                         "footer";
+                         "content";
     grid-template-columns: 100%;
-    grid-template-rows: 70px minmax(calc(100vh - 120px), 1fr) 50px;
-    
+    grid-template-rows: 50px minmax(calc(100vh - 50px), 1fr);
+    background-image: url('https://i.ibb.co/tH13HXb/rueben-mcchristian-x-JSod-SLml-GE-unsplash.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .header{
-    grid-area: "header";
-    width: 100% ;
+    width: 59% ;
     height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #000;
-    color: orange;
     padding: 0;
-    margin: 0;
+    margin: 0 0 0 20px;
 
 }
 
-.logo{
-    font-size: 35px;
-    margin: 0 20px;
-    font-weight: 700;
-}
 
 .form{
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 30px 0 0 ;
+    
 }
 
 .header_inputText{
     height: 30px;
-    width: 200px;
+    width: 80%;
     border-radius: 5px 0 0 5px;
     border: none;
     margin: 0 0 0 5px;
@@ -55,56 +53,71 @@ body{
     padding: 0 10px;
     box-sizing: border-box;
     font-size: 18px;
+    background: rgba(234, 236, 239, .4);
+}
+
+.header_inputText::placeholder{
+    color: rgb(42, 41, 41);
 
 }
 
 .header_button{
     height: 30px;
-    width: 75px;
+    width: 20%;
     border-radius: 0 5px 5px 0;
     border: none;
     margin: 0;
     padding: 0;     
-    background-color: orange;
-    color: white;
+    color: rgb(42, 41, 41);
     cursor: pointer;
+    font-size: 18px;
+    position: relative;
+    background: rgba(234, 236, 239, .4);
 }
 
-.header_prevRequest{
-    background-color: black;
-    color: white;
-    font-size: 30px;
-    margin: 0 0 0 30px
+.header_button::before{
+    content: '|';
+    width: 9px;
+    height: 20%;
+    color: rgb(93, 93, 93);
+    position: absolute;
+    left: 30px;
+    top: 0px;
 }
+
 
 .content{
-    width: 90%;
-    position: relative;
-    background-color: red;
-    left: 50%;
-    transform: translate(-50%);
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-areas: 'curWeather requestList'
+                         'subInfo requestList'
+                         'weekWeather requestList';
+    grid-template-rows: 30% 40% 30%;
+    grid-template-columns: 60% 40%;                                      
+    width: 100%;
+
+   
+
 }
 
-.currentlyWeather{
-    margin: 50px 10px;
-    height: 75%;
-    width: 30%;
-    max-width: 450px;
-    background: linear-gradient(0deg, rgba(118,236,255,1) 38%, rgba(0,158,246,1) 100%);
+.currentlyWeather{    
+    width: 95%;
+    height: 95%;
     position: relative;
     border-radius: 20px;
+    grid-area: curWeather;
+    left: 50%;
+    transform: translate(-50%);
+    
 }
 
 .temp{
     position: absolute;
-    top: 0;
-    right: 9px;
-    font-size: 130px;
+    top: 50px;
+    left: 20px;
+    font-size: 85px;
     color: white;
     font-weight: 700;
+    margin: 0;
     
 }
 
@@ -128,27 +141,33 @@ body{
 
 .wethDescription{
     position: absolute;
-    top: 180px;
-    left: 20px;
-    font-size: 28px;
+    top: 130px;
+    right: 50px;;
+    font-size: 20px;
     font-weight: 600;
     color: white;
 }
 
 .imgWeather{
     position: absolute;
-    top: -110px;
-    left: -10px;
-    width: 120px;
+    top: -150px;
+    left: -50px;
+    width: 200px;
 }
 
 .subInfo{
-    width: 100%;
-    height: 50%;
-    position: absolute;
-    top: 50%;
+    width: 95%;
+    height: 95%;
+    grid-area: subInfo;;
     display: flex;
     flex-wrap: wrap;
+    background: rgba(170, 170, 170, 0.4);
+    color: white;
+    position: relative;
+    border-radius: 24px;
+    left: 50%;
+    transform: translate(-50%);
+    
 }
 
 .subInfo img{
@@ -185,59 +204,87 @@ body{
 }
 
 .weekWeather{
-    margin: 50px 0;
-    height: 75%;
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    background: linear-gradient(0deg, rgba(118,236,255,1) 38%, rgba(0,158,246,1) 100%);
-    border-radius: 20px; 
+    width: 95%;
+    height: 95%;
+    grid-area: weekWeather;
+    background: rgba(170, 170, 170, 0.4);
+    border-radius: 24px; 
     color: white;   
+    display: flex;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+
 }
 
 .weekDay{
     margin: 0;
+    font-size: 23px;
 }
 
 .weekWeather_date{
     height: 20%;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    width: 20%;
     padding: 0px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .weekWeather_date-wrapper{
-    width: 50%;
+    width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
 
-.weekWeather_day{
-    width: 100px;
+.weekWeather_date-wrapper img{
+    width: 60px;
 }
+
+/* .weekWeather_day{
+    width: 100px;
+} */
 
 .temp_week{
     font-size: 20px;
     width: 75px;
+    margin: 0;
 }
 
 .weekWeather_subInfo{
-    font-size: 21px;
+    font-size: 15px;
 }
 
+
+
 .night-theme{
-    background: linear-gradient(0deg, rgba(111,122,238,1) 0%, rgba(81,55,122,1) 100%);
+    width: 100%;
+    height: 100%;
+    background-image: url('https://i.ibb.co/xz8TGk7/enrique-ortega-miranda-y-WKLtbd3-SLU-unsplash.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .requests{
    
-    width: 38%;
-    height: 100%;
-    background-color: blue;
+    width: 95%;
+    height: 97%;
+    background: rgba(170, 170, 170, 0.4);
+    grid-area: requestList;
+    border-radius: 24px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-52%, -50%);
+}
 
+.requestTitle h3{
+    text-align: center;
+    color: white;
+    margin: 13px 0 25px 0;
 }
 
 .requestElement{
@@ -245,6 +292,92 @@ body{
     justify-content: space-between;
     margin: 7px 7px;
     font-size: 18px;
+    position: relative;
+    
+}
+
+.requestElement p{
+    margin: 10px;
+    font-size: 21px;
+    color: white;
+}
+
+.requestElement::before{
+    content: '';
+    width: 0px;
+    height: 3px;
+    background-color: rgba(234, 236, 239, .4);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.requestElement:hover::before{
+    width:100%;
+    transition-duration: 1.5s;
+     
+ }
+
+.requestElement:hover .deleteCityButton{
+   opacity: 1;
+    transition-duration: 1.5s;  
+}
+
+.requestElement:hover .deleteCityButton::before{
+    height: 20px;
+    transition-delay: 0.25s;
+    transition-duration: .4s; 
+    transform: rotate(225deg);
+ }
+
+ .requestElement:hover .deleteCityButton::after{
+    height: 20px;
+    transition-duration: .5s; 
+    transform: rotate(-225deg); 
+ }
+
+
+.deleteCityButton{
+    padding: 0;
+    border: 0;
+    width: 20px;
+    height: 20px;
+    margin: 15px 7px 0 0;
+    opacity: 0;
+    position: relative;
+    background: none;
+   
+}
+
+
+.deleteCityButton::before{
+    content: '';
+    width: 2px;
+    height: 0px;
+    background-color: rgba(234, 236, 239, 1);
+    transform: rotate(45deg);
+    position: absolute;
+    top: 0px;
+    left: 9px;
+    
+}
+
+.deleteCityButton::after {
+    content: '';
+    width: 2px;
+    height: 0px;
+    background-color: rgba(234, 236, 239, 1);
+    transform: rotate(-45deg);
+    position: absolute;
+    top: 0px;
+    left: 9px;
+   
+}
+
+
+.requestElement_title{
+    cursor: pointer;
+    position: relative;
 }
 
 
@@ -254,9 +387,8 @@ body{
 
 
 
-
-
+/* 
 
 .footer{
     background-color: grey;
-}
+} */
