--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    transition-duration: 3s;
 }
 
 .header{
@@ -151,7 +152,8 @@ body{
 .imgWeather{
     position: absolute;
     top: -150px;
-    left: -50px;
+    left: 50%;
+    transform: translate(-50%);
     width: 200px;
 }
 
@@ -161,7 +163,7 @@ body{
     grid-area: subInfo;;
     display: flex;
     flex-wrap: wrap;
-    background: rgba(170, 170, 170, 0.4);
+    background:  rgba(170, 170, 170, 0.4);
     color: white;
     position: relative;
     border-radius: 24px;
@@ -225,7 +227,7 @@ body{
 .weekWeather_date{
     height: 20%;
     width: 20%;
-    padding: 0px 20px;
+    margin: 10px 0 0 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -257,17 +259,6 @@ body{
     font-size: 15px;
 }
 
-
-
-.night-theme{
-    width: 100%;
-    height: 100%;
-    background-image: url('https://i.ibb.co/xz8TGk7/enrique-ortega-miranda-y-WKLtbd3-SLU-unsplash.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
 .requests{
    
     width: 95%;
@@ -280,6 +271,7 @@ body{
     left: 50%;
     transform: translate(-52%, -50%);
 }
+
 
 .requestTitle h3{
     text-align: center;
@@ -380,8 +372,20 @@ body{
     position: relative;
 }
 
+.night-theme_smokeBg{
+    background: rgba(255, 255, 255, 0.4);
+  transition-duration: 2s;
+}
 
-
+.night-theme{
+    width: 100%;
+    height: 100%;
+    transition-duration: 3s;
+    background-image: url('img/bgNight.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 
 
