--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,24 @@ body{
 
 }
 
+.burgerMenu{
+    position: absolute;
+    width: 30px;
+    height: 25px;
+    right: 3%;
+    background: linear-gradient(
+        to bottom, 
+       
+            #ffffff, #ffffff 20%, 
+            #ff000000 20%, #ff000000 40%, 
+            #ffffff 40%, #ffffff 60%, 
+            #ff000000 60%, #ff000000 80%, 
+            #ffffff 80%, #ffffff 100%
+        );
+    display: none;
+   
+}
+
 .clocks{
     width: 37%;
     height: 32px;
@@ -139,6 +157,7 @@ body{
     grid-template-rows: 30% 40% 30%;
     grid-template-columns: 60% 40%;                                      
     width: 100%;
+    position: relative;
 }
 
 .currentlyWeather{    
@@ -314,6 +333,10 @@ body{
     transform: translate(-52%, -50%);
 }
 
+.hide{
+    display: none;
+}
+
 
 .requestTitle h3{
     text-align: center;
@@ -412,6 +435,7 @@ body{
 .requestElement_title{
     cursor: pointer;
     position: relative;
+    width: 80%;
 }
 
 .night-theme_smokeBg{
@@ -423,7 +447,7 @@ body{
     width: 100%;
     height: 100%;
     transition-duration: 2s;
-    background-image: url('img/bgNight.jpg');
+    background-image: url('../img/bgNight.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
